--- a/user/content/_posts/2021-01-01.happy-new-year.md
+++ b/user/content/_posts/2021-01-01.happy-new-year.md
@@ -5,7 +5,7 @@ date: 01-01-2021
 category: [ new-year ]
 thumbnail: /user/media/2021/01/happy-new-year.jpg
 ---
-![Happy New Year.](http://benjlu.test/user/media/2021/01/happy-new-year.jpg)
+![Happy New Year.](http://benjlu.test/user/media/2021/01/happy-new-year.jpg){.alignwide}
 It's hard to believe that it's the start of a new year, a brand new year that gives you a fresh slate on life and new possibilities. There's hope for something greater than the year before with a sense of that this year would be better.
 
 ## Bankruptcy
