--- a/user/content/_posts/2021-01-02.this-is-a-test.md
+++ b/user/content/_posts/2021-01-02.this-is-a-test.md
@@ -5,4 +5,5 @@ date: 2021-01-02
 category: [ new-year ]
 thumbnail: /user/media/2021/01/happy-new-year.jpg
 ---
+![Happy New Year.](http://benjlu.test/user/media/2021/01/happy-new-year.jpg){.alignwide}
 This is a test
