--- a/user/content/_posts/2021-02-28.gatsbyjs.md
+++ b/user/content/_posts/2021-02-28.gatsbyjs.md
@@ -11,3 +11,6 @@ Recently this week, I have been learning Gatsby from Linkedin Learning, an onlin
 
 ## GatsbyJS
 GatsyJS is another static site generator that I have been learning this past week along with the last post about GitHub Pages and Jekyll. GatsbyJS can be use to build static sites that are either web apps, portfolio, and blogs.
+
+## Alternatives
+I haven't really decide what framework to use after learning all these diffrent framework since I just moved away from WordPress while back and most likely, I won't be going back to WordPress for my personal blog. 
